@@ -1,3 +1,9 @@
+2008-12-21  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_jpeg.c: Avoid errors if the application writes a full
+	strip for the last partial strip in a jpeg compressed file.
+	http://bugzilla.maptools.org/show_bug.cgi?id=1981
+
 2008-10-29  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_flush.c: Make sure that BEENWRITING is cleared when
